# MPM-CUDA

./: .gitignore  CLAUDE.md  README.md  bench_svd.py  pyproject.toml  simulate.py
Benchmarking/: benchmark.py
Rendering/: export_frames.py  render_blender.py  render_particles.py  render_video.py
conf/: config.yaml
conf/experiment/: olaf.yaml  snowball.yaml
conf/kernel/: cuda.yaml  cuda_v1.yaml  cuda_v2.yaml  cuda_v3.yaml  fused_cuda.yaml  fused_torch.yaml  jax.yaml  torch.yaml  torch_compile.yaml
conf/physics/: default.yaml
conf/physics/material/: snow.yaml
conf/run/: default.yaml  hires.yaml
conf/scene/: snowball.yaml  snowman.yaml
conf/solver/: large.yaml  medium.yaml  small.yaml  test.yaml
src/mpm/: __init__.py  params.py  state.py
src/mpm/io/: writer.py
src/mpm/problems/: particles.py  scene.py
src/mpm/solver/: cuda_solver.py  fused_jax.py  fused_p2g.py  fused_p2g_torch.py  g2p.py  grid_ops.py  p2g.py  solver.py  stress.py
src/mpm/solver/kernels/: fused_stress_p2g.cpp  fused_stress_p2g.cu  v1_naive.cu  v2_fused.cu  v3_warp.cu
